[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/PL/Drone_idle_down.png" type="Texture" id=1]
[ext_resource path="res://Scenes/characters/PL/BehaviorTree.gd" type="Script" id=2]
[ext_resource path="res://Scenes/characters/PL/Drone.gd" type="Script" id=3]
[ext_resource path="res://Scenes/characters/PL/goingBack.gd" type="Script" id=4]
[ext_resource path="res://Scenes/characters/PL/rescuing.gd" type="Script" id=5]
[ext_resource path="res://Scenes/characters/NPC.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/characters/PL/goingTo.gd" type="Script" id=7]
[ext_resource path="res://Scenes/characters/PL/DroneMove.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 15, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 15, 0, 15, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 30, 0, 15, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 45, 0, 15, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 15, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 15, 32, 15, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 30, 32, 15, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 45, 32, 15, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Move",
"speed": 11.46
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 158.013

[sub_resource type="CircleShape2D" id=12]
radius = 3.16228

[node name="Drone" instance=ExtResource( 6 )]
script = ExtResource( 3 )
movement_speed = 0.0
max_speed = 0.0

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )
frame = 2

[node name="CollisionShape2D" parent="." index="1"]
shape = null

[node name="Move" parent="StateMachine" index="1"]
script = ExtResource( 8 )

[node name="BehaviorTree" parent="." index="3"]
script = ExtResource( 2 )

[node name="goingTo" parent="BehaviorTree" index="1"]
script = ExtResource( 7 )

[node name="rescuing" type="Node" parent="BehaviorTree" index="2"]
script = ExtResource( 5 )

[node name="goingBack" type="Node" parent="BehaviorTree" index="3"]
script = ExtResource( 4 )

[node name="SearchArea" type="Area2D" parent="." index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchArea" index="0"]
shape = SubResource( 11 )

[node name="CatchArea" type="Area2D" parent="." index="5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchArea" index="0"]
shape = SubResource( 12 )
